# mdbook-summary-maker

./: Cargo.toml
src/: main.rs
src/summary_maker/: mod.rs
