[package]
name = "mdbook-summary-maker"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = "4.2.7"
fs = "0.0.5"
mdbook = "0.4"
pathbuf = "0.3.1"
semver = "1.0.17"
serde_json = "1.0.96"
